testsuite/tests/dependent/should_fail/T15859.stderr

T15859.hs:14:19: error:
    • Illegal visible, dependent quantification in the type of a term:
      forall k -> k -> *
      (GHC does not yet support this)
    • In the expansion of type synonym ‘KindOf’
      In an expression type signature: KindOf A
      In the expression: undefined :: KindOf A
